--- a/4-guia/ejercicios-4/ej-8-4.tex
+++ b/4-guia/ejercicios-4/ej-8-4.tex
@@ -31,17 +31,20 @@ Voy a usar $\blue{q}$ para el \blue{cociente} y \magenta{$r$} para el \magenta{r
 
   \item $a = 3b + 7,\quad b = b$
         $$
-          \llave{c}{
-            \text{Si: } |b| > 7 \to (\blue{q},\magenta{r}) = (3,7)\\
-            \text{Si: } |b| \leq 7 \to (\blue{q},\magenta{r}) = (3,7)
-          }
-        $$
-        $$
-          \begin{array}{|l|c|c|c|c|c|c|c|}
-            \hline
-            (a,b)                  & (-14,-7) & (-11,-6) & (-8,-5) & (-5,-4) & (4, -1) & \dots \\ \hline
-            (\blue{q},\magenta{r}) & (2,0)    & (2,1)    & (2,2)   & (2,3)   & (4, 0)  & \dots \\ \hline
+          \begin{array}{r|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|} \cline{2-15}
+            \text{dividendo}\to & a = 3b + 7                  & -5 & -2 & 1  & 4  & 10 & 13 & 16 & 19 & 22 & 25 & 28 & 31 & 34 \\ \cline{2-15}
+            \text{divisor}  \to & b                           & -4 & -3 & -2 & -1 & 1  & 2  & 3  & 4  & 5  & 6  & 7  & 8  & 9  \\ \cline{2-15}
+            \text{cociente} \to & \blue{q}                    & 2  & 1  & 0  & -4 & 10 & 6  & 5  & 4  & 4  & 4  & 4  & 3  & 3  \\ \cline{2-15}
+            \text{resto}    \to & 0 \leq \magenta{r} \leq |d| & 3  & 1  & 1  & 0  & 0  & 1  & 1  & 3  & 2  & 1  & 0  & 7  & 7  \\ \cline{2-15}
           \end{array}
+        $$
+        Pasando en limpio, para $b \en \enteros_{\distinto 0}$:
+        $$
+          \llave{rcl}{
+            \blue{q_b(a)} = 3  & \text{ para } & |b| \geq 8\\
+            \magenta{r_b(a)} = 7  & \text{ para } & |b| \geq 8\\
+            \text{ver tabla}& \text{ para } & |b| < 8
+          }
         $$
 
   \item $a = b^2 - 6,\quad b \distinto 0$:
@@ -82,8 +85,8 @@ Voy a usar $\blue{q}$ para el \blue{cociente} y \magenta{$r$} para el \magenta{r
         Entonces en la tabla están los valores de los cocientes. Los primeros están sacados a manopla:
         $$
           \llave{ccl}{
-            \blue{q_n} = n - 2 & \text{ para } & n \geq 8 \\
-            \magenta{r_n} = 9 & \text{ para } & n \geq 8 \\
+            \blue{q_n(a)} = n - 2 & \text{ para } & n \geq 8 \\
+            \magenta{r_n(a)} = 9 & \text{ para } & n \geq 8
           }
         $$
 
