fix extra 2 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
@@ -1,31 +1,31 @@
 \begin{enunciado}{\ejExtra}
-Probar que, para todo $n \en \naturales$,
-$$ \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}.$$
+  Probar que, para todo $n \en \naturales$,
+  $$ \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}.$$
 \end{enunciado}
 
 \textit{Inducción: }
 $p(n): \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}
-\paratodo n \en \naturales$\par
+  \paratodo n \en \naturales$\par
 
 \textit{Caso base: $p(1)$:}\par
 $
-	\sumatoria{k=1}{\magenta{1}+1} \frac{3}{\magenta{1} + k} =
-	\frac{3}{2} + \frac{3}{3} =
-	\frac{5}{2}
-	\stackrel{\checkmark}\leq
-	\frac{5}{2}
-	\to
-	p(1) \text{ Verdadera} \Tilde
+  \sumatoria{k=1}{\magenta{1}+1} \frac{3}{\magenta{1} + k} =
+  \frac{3}{2} + \frac{3}{3} =
+  \frac{5}{2}
+  \stackrel{\checkmark}\leq
+  \frac{5}{2}
+  \to
+  p(1) \text{ Verdadera} \Tilde
 $\par
 
 \textit{Paso inductivo: }\par
 $
-	p(\magenta{j}): \sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq
-    \frac{5}{2} \text{ Verdadera }
-	\entonces
-    \text{ quiero probar que } p(\magenta{j + 1}):
-	\sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} \leq
-    \frac{5}{2} \text{ Verdadera }
+  p(\magenta{j}): \sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq
+  \frac{5}{2} \text{ Verdadera }
+  \entonces
+  \text{ quiero probar que } p(\magenta{j + 1}):
+  \sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} \leq
+  \frac{5}{2} \text{ Verdadera }
 $
 
 En los ejercicios donde la $n$ aparece adentro de la sumatoria,
@@ -34,58 +34,64 @@ conviene abrirla para encontrar la
 $\sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq \frac{5}{2}$\par
 
 $\sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} =
-	\frac{3}{j+1} +
-	\frac{3}{j+2} +
-	\frac{3}{j+3} +
-	\frac{3}{j+4} +
-	\dots +
-	\frac{3}{2j} +
-	\frac{3}{2j+1} \Tilde
+  \frac{3}{j+1} +
+  \frac{3}{j+2} +
+  \frac{3}{j+3} +
+  \frac{3}{j+4} +
+  \dots +
+  \frac{3}{2j} +
+  \frac{3}{2j+1} \Tilde
 $\par
 
 $
-	\sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} =
-	\sumatoria{k=1}{j + 2} \frac{3}{j+1 + k} =
-	\frac{3}{j+1 + 1} +
-	\frac{3}{j+1 + 2} +
-	\frac{3}{j+1 + 3} +
-	\dots +
-	\frac{3}{j+1 + j-1} +
-	\frac{3}{j+1 + j} +
-	\frac{3}{j+1 + j+1}+
-	\frac{3}{j+1 + j+2} =  \\
-	=
-	\frac{3}{j+2} +
-	\frac{3}{j+3} +
-	\frac{3}{j+4} +
-	\dots +
-	\frac{3}{2j} +
-	\frac{3}{2j+1} +
-	\frac{3}{2j+2}+
-	\frac{3}{2j+3} =
-	\yellow{-\frac{3}{j+1}} +
-	\ub{
-		\yellow{\frac{3}{j+1}  } +
-		\frac{3}{j+2} +
-		\frac{3}{j+3} +
-		\frac{3}{j+4} +
-		\dots +
-		\frac{3}{2j} +
-		\frac{3}{2j+1}
-	}{
-      \sumatoria{k=1}{j + 1} \frac{3}{j + k}
-	} +
-		\frac{3}{2j+2}+
-		\frac{3}{2j+3} \\
-        =
-      \sumatoria{k=1}{j + 1} \frac{3}{j + k} - \frac{3}{j+1} + \frac{3}{2j+2} + \frac{3}{2j+3} =
-      \sumatoria{k=1}{j + 1} \frac{3}{j + k} \ub{- \frac{3}{2k+2} + \frac{3}{2j+3}}{\leq 0}
-      \stackrel{HI}\leq
-      \frac{5}{2}  - \ub{\frac{3}{(2k+2)(2k+3)}}{\geq 0 } \leq \frac{5}{2} 
-      \entonces 
-    \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
-    \stackrel{\checkmark}\leq
-    \frac{5}{2} \text{ Verdadera } \Tilde
+  \sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} =
+  \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k} =
+  \frac{3}{j+1 + 1} +
+  \frac{3}{j+1 + 2} +
+  \frac{3}{j+1 + 3} +
+  \dots +
+  \frac{3}{j+1 + j-1} +
+  \frac{3}{j+1 + j} +
+  \frac{3}{j+1 + j+1}+
+  \frac{3}{j+1 + j+2} =  \\
+  =
+  \frac{3}{j+2} +
+  \frac{3}{j+3} +
+  \frac{3}{j+4} +
+  \dots +
+  \frac{3}{2j} +
+  \frac{3}{2j+1} +
+  \frac{3}{2j+2}+
+  \frac{3}{2j+3} =
+  \yellow{-\frac{3}{j+1}} +
+  \ub{
+    \yellow{\frac{3}{j+1}  } +
+    \frac{3}{j+2} +
+    \frac{3}{j+3} +
+    \frac{3}{j+4} +
+    \dots +
+    \frac{3}{2j} +
+    \frac{3}{2j+1}
+  }{
+    \sumatoria{k=1}{j + 1} \frac{3}{j + k}
+  } +
+  \frac{3}{2j+2}+
+  \frac{3}{2j+3} = \\
+  =
+  \yellow{-\frac{3}{j+1}} + \frac{3}{2j+2} + \frac{3}{2j+3} + \sumatoria{k=1}{j + 1} \frac{3}{j + k} =
+  \ub{- \frac{3}{2j+2} + \frac{3}{2j+3}}{\leq 0}  + \sumatoria{k=1}{j + 1}\frac{3}{j + k}
+  \menorIgual{\purple{HI}}
+  \ub{- \ub{\frac{3}{(2k+2)(2k+3)}}{> 0 }}{<0} + \frac{5}{2}
+  \leq
+  \frac{5}{2}
+  \entonces
+  \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
+  \leq
+  \frac{5}{2} \Tilde
 $
 
 Dado que $p(1),\, p(j), p(j+1)$ resultaron verdaderas por principio de inducción  también lo es $p(n) \paratodo n \en \naturales$.
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
