--- a/4-guia/ejercicios-4/ej-8-4.tex
+++ b/4-guia/ejercicios-4/ej-8-4.tex
@@ -22,7 +22,11 @@ Voy a usar $\blue{q}$ para el \blue{cociente} y \magenta{$r$} para el \magenta{r
 }
 
 \begin{enumerate}[label=\alph*)]
-  \item $133 \div (-14) \entonces 133 = \ua{\blue{(-9)}}{\blue{q}} \cdot (-14) + \ua{\magenta{7}}{\magenta{r}}$
+  \item Congruencia:
+        $$
+          d \divideA a
+          \Sii{def}
+        $$
 
   \item $13 \div 111  \entonces 13 = 111 \cdot \ua{\blue{0}}{\blue{q}} + \ua{\magenta{13}}{\magenta{r}}$
 
