--- a/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
@@ -1,97 +1,114 @@
 \begin{enunciado}{\ejExtra}
   Probar que, para todo $n \en \naturales$,
-  $$ \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}.$$
+  $$
+    \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}.
+  $$
 \end{enunciado}
 
 \textit{Inducción: }
-$p(n): \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}
-  \paratodo n \en \naturales$\par
+$$
+  p(n): \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}
+  \paratodo n \en \naturales
+$$
 
-\textit{Caso base: $p(1)$:}\par
-$
+\textit{Caso base: }
+$$
+  p(1):
   \sumatoria{k=1}{\magenta{1}+1} \frac{3}{\magenta{1} + k} =
   \frac{3}{2} + \frac{3}{3} =
   \frac{5}{2}
-  \stackrel{\checkmark}\leq
+  \leq
   \frac{5}{2}
-  \to
-  p(1) \text{ Verdadera} \Tilde
-$\par
+$$
+Por lo que $p(1)$ resultó verdadera.
 
-\textit{Paso inductivo: }\par
-$
-  p(\magenta{j}): \sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq
-  \frac{5}{2} \text{ Verdadera }
-  \entonces
-  \text{ quiero probar que } p(\magenta{j + 1}):
+\textit{Paso inductivo: }
+Asumo como \textit{verdadero} para algún $\magenta{j} \en \enteros$
+$$
+  p(\magenta{j}): \ub{\sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq \frac{5}{2}}{\text{\purple{hipótesis inductiva}}},
+$$
+entonces quiero probar que:
+$$
+  p(\magenta{j + 1}):
   \sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} \leq
-  \frac{5}{2} \text{ Verdadera }
-$
+  \frac{5}{2},
+$$
+también  sea verdadera.
 
-En los ejercicios donde la $n$ aparece adentro de la sumatoria,
-conviene abrirla para encontrar la
-\textit{hipótesis inductiva: }
-$\sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} \leq \frac{5}{2}$\par
+\bigskip
 
-$\sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} =
+En los ejercicios donde la $n$ aparece adentro de la sumatoria, conviene abrirla para encontrar la
+\purple{hipótesis inductiva}. Arranco abriendo la sumatoria de $p(\magenta{j})$ para que sea más fácil ubicar las cosas:
+$$
+  \sumatoria{k=1}{\magenta{j} + 1} \frac{3}{\magenta{j} + k} =
   \frac{3}{j+1} +
   \frac{3}{j+2} +
   \frac{3}{j+3} +
   \frac{3}{j+4} +
   \dots +
   \frac{3}{2j} +
-  \frac{3}{2j+1} \Tilde
-$\par
+  \frac{3}{2j+1}
+  \llamada1
+$$
 
-$
-  \sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} =
-  \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k} =
-  \frac{3}{j+1 + 1} +
-  \frac{3}{j+1 + 2} +
-  \frac{3}{j+1 + 3} +
-  \dots +
-  \frac{3}{j+1 + j-1} +
-  \frac{3}{j+1 + j} +
-  \frac{3}{j+1 + j+1}+
-  \frac{3}{j+1 + j+2} =  \\
-  =
-  \frac{3}{j+2} +
-  \frac{3}{j+3} +
-  \frac{3}{j+4} +
-  \dots +
-  \frac{3}{2j} +
-  \frac{3}{2j+1} +
-  \frac{3}{2j+2}+
-  \frac{3}{2j+3} =
-  \yellow{-\frac{3}{j+1}} +
-  \ub{
-    \yellow{\frac{3}{j+1}  } +
+Ahora laburon con la expresión de $p(\magenta{j+1})$:
+$$
+  \begin{array}{rcl}
+    \sumatoria{k=1}{\magenta{j + 1} + 1} \frac{3}{\magenta{j+1} + k} =
+    \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
+     & =                        &
+    \frac{3}{j+1 + 1} +
+    \frac{3}{j+1 + 2} +
+    \frac{3}{j+1 + 3} +
+    \dots +
+    \frac{3}{j+1 + j-1} +
+    \frac{3}{j+1 + j} +
+    \frac{3}{j+1 + j+1}+
+    \frac{3}{j+1 + j+2} =                                                                                                     \\
+     & =                        &
     \frac{3}{j+2} +
     \frac{3}{j+3} +
     \frac{3}{j+4} +
     \dots +
     \frac{3}{2j} +
-    \frac{3}{2j+1}
-  }{
-    \sumatoria{k=1}{j + 1} \frac{3}{j + k}
-  } +
-  \frac{3}{2j+2}+
-  \frac{3}{2j+3} = \\
-  =
-  \yellow{-\frac{3}{j+1}} + \frac{3}{2j+2} + \frac{3}{2j+3} + \sumatoria{k=1}{j + 1} \frac{3}{j + k} =
-  \ub{- \frac{3}{2j+2} + \frac{3}{2j+3}}{\leq 0}  + \sumatoria{k=1}{j + 1}\frac{3}{j + k}
-  \menorIgual{\purple{HI}}
-  \ub{- \ub{\frac{3}{(2k+2)(2k+3)}}{> 0 }}{<0} + \frac{5}{2}
-  \leq
-  \frac{5}{2}
-  \entonces
-  \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
-  \leq
-  \frac{5}{2} \Tilde
-$
+    \frac{3}{2j+1} +
+    \frac{3}{2j+2}+
+    \frac{3}{2j+3}                                                                                                            \\
+     & \igual{\red{!!}}         &
+    \yellow{-\frac{3}{j+1}} +
+    \ub{
+      \yellow{\frac{3}{j+1}  } +
+      \frac{3}{j+2} +
+      \frac{3}{j+3} +
+      \frac{3}{j+4} +
+      \dots +
+      \frac{3}{2j} +
+      \frac{3}{2j+1}
+    }{
+      \sumatoria{k=1}{j + 1} \frac{3}{j + k}
+    } +
+    \frac{3}{2j+2}+
+    \frac{3}{2j+3}                                                                                                            \\
+     & =                        &
+    \yellow{-\frac{3}{j+1}} + \frac{3}{2j+2} + \frac{3}{2j+3} + \sumatoria{k=1}{j + 1}\frac{3}{j + k} \igual{\red{!}}
+    \ub{- \frac{3}{2j+2} + \frac{3}{2j+3}}{\leq 0}  + \purple{\sumatoria{k=1}{j + 1} \frac{3}{j + k}}\menorIgual{\purple{HI}} \\
+     & \menorIgual{\purple{HI}} &
+    \ob{- \ub{\frac{3}{(jk+2)(2j+3)}}{> 0 }}{<0} + \purple{\frac{5}{2}}
+    \leq
+    \frac{5}{2}
+    \entonces
+    \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
+    \leq
+    \frac{5}{2}
+  \end{array}
+$$
+Mostrando que $p(j+1)$ también es verdadera.
+
+\bigskip
 
 Dado que $p(1),\, p(j), p(j+1)$ resultaron verdaderas por principio de inducción  también lo es $p(n) \paratodo n \en \naturales$.
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/gdcorrea97}{Gustavo Correa \github}
 \end{aportes}
