polish ej 19 guia 2

--- a/2-guia/ejercicios-2/ej-19-2.tex
+++ b/2-guia/ejercicios-2/ej-19-2.tex
@@ -103,14 +103,14 @@
 
         \paragraph{Auxiliar 1}{Sea $n \en \naturales $
           \begin{align*}
-             & 1 \leq n \iff 1 + 1 \leq n + 1 \iff 2 \leq n + 1 \iff n + 2 \leq n + n + 1 \iff n + 2 \leq 2n + 1 \\
-             & \iff 1 \leq \frac{2n+1}{n+2}
+             & 1 \leq n \sii 1 + 1 \leq n + 1 \sii 2 \leq n + 1 \sii n + 2 \leq n + n + 1 \sii n + 2 \leq 2n + 1 \\
+             & \sii 1 \leq \frac{2n+1}{n+2}
           \end{align*}
         }
 
         \paragraph{Auxiliar 2}{Sea $n \en \naturales $
           \begin{align*}
-            n \geq  1 \geq  \frac{2}{3}
+            n \geq  \frac{2}{3}
             \Sii{\red{!}}
             n - \frac{2}{3} \geq \magenta{0}
           \end{align*}
